fixed broken links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>On the Wings of an Angel: Sweet Honey Buns</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
 </head>
 <body>
@@ -12,9 +12,9 @@
         <header>
             <h1 class="animate__animated animate__rollIn">Bee Gone: How the Bees Got Got by the Government; A Docu-blog</h1>
             <section class="headerImages">    
-                <img class="animate__animated animate__flip animate__delay animate__infinite" alt="Government Propaganda about how bees are bad. They aren't." src="/assets/beeheader.png">
-                <img alt="Big Gov doesn't want you to know they're not qualified for science." src="/assets/beeheader3.png">
-                <img class="animate__animated animate__flip animate__delay-3s animate__infinite" alt="Bees should be loved, not scorned." src="/assets/beeheader2.png">
+                <img class="animate__animated animate__flip animate__delay animate__infinite" alt="Government Propaganda about how bees are bad. They aren't." src="./assets/beeheader.png">
+                <img alt="Big Gov doesn't want you to know they're not qualified for science." src="./assets/beeheader3.png">
+                <img class="animate__animated animate__flip animate__delay-3s animate__infinite" alt="Bees should be loved, not scorned." src="./assets/beeheader2.png">
             </section>
         </header>
         
