--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1 class="animate__animated animate__rollIn">Bee Gone: How the Bees Got Got by the Government; A Docu-blog</h1>
             <section class="headerImages">    
                 <img class="animate__animated animate__flip animate__delay animate__infinite" alt="Government Propaganda about how bees are bad. They aren't." src="./assets/beeheader.png">
-                <img alt="Big Gov doesn't want you to know they're not qualified for science." src="./assets/beeheader3.png">
+                <img alt="Big Gov doesn't want you to know they're not qualified for science." src="./assets/beeheader3.PNG">
                 <img class="animate__animated animate__flip animate__delay-3s animate__infinite" alt="Bees should be loved, not scorned." src="./assets/beeheader2.png">
             </section>
         </header>
